--- a/lang/fr.json
+++ b/lang/fr.json
@@ -561,7 +561,7 @@
       "dual_hand": "Deux mains",
       "dice": "Dé",
       "edit": "Éditer",
-      "expertise": "Expertise",
+      "expertise": "Maîtrise",
       "extended_test": "Test étendue",
 	    "faster": "Accélérer",
       "features": "Fonctionnalités",
@@ -1063,7 +1063,7 @@
       "edge_perform": "Action !",
       "edgegain": "Atout-Gain (max) : ",
       "edgegain_player": " (Joueur)",
-      "exp": "Expertise",
+      "exp": "Maîtrise",
       "explode": "Explosif",
       "extended": "Test étendu",
       "interval": "Interval",
