Localization improvements for plurals (#89)

--- a/lang/de.json
+++ b/lang/de.json
@@ -1691,21 +1691,53 @@
         "continue": "Mit ausgedehnter Probe fortfahren",
         "desc": "Insgesamt sind {timePassed} {intervalScale} vergangen und du hast {hits} Erfolge.",
         "intervalScale": {
-          "minute_short": "min",
-          "minute_long": "Minute",
+          "round_short": "r",
+          "round_long_zero": "rounds",
+          "round_long_one": "round",
+          "round_long_two": "rounds",
+          "round_long_few": "rounds",
+          "round_long_many": "rounds",
+          "round_long_other": "rounds",
+          "minute_short": "m",
           "minute_long_plural": "Minuten",
+          "minute_long_zero": "Minuten",
+          "minute_long_one": "Minute",
+          "minute_long_two": "Minuten",
+          "minute_long_few": "Minuten",
+          "minute_long_many": "Minuten",
+          "minute_long_other": "Minuten",
           "hour_short": "h",
-          "hour_long": "Stunde",
           "hour_long_plural": "Stunden",
+          "hour_long_zero": "Stunden",
+          "hour_long_one": "Stunde",
+          "hour_long_two": "Stunden",
+          "hour_long_few": "Stunden",
+          "hour_long_many": "Stunden",
+          "hour_long_other": "Stunden",
           "day_short": "d",
-          "day_long": "Tag",
           "day_long_plural": "Tage",
-          "week_short": "Woche",
-          "week_long": "Woche",
+          "day_long_zero": "Tage",
+          "day_long_one": "Tag",
+          "day_long_two": "Tage",
+          "day_long_few": "Tage",
+          "day_long_many": "Tage",
+          "day_long_other": "Tage",
+          "week_short": "w",
           "week_long_plural": "Wochen",
-          "month_short": "m",
-          "month_long": "Monat",
-          "month_long_plural": "Monate"
+          "week_long_zero": "Wochen",
+          "week_long_one": "Woche",
+          "week_long_two": "Wochen",
+          "week_long_few": "Wochen",
+          "week_long_many": "Wochen",
+          "week_long_other": "Wochen",
+          "month_short": "M",
+          "month_long_plural": "Monate",
+          "month_long_zero": "Monate",
+          "month_long_one": "Monat",
+          "month_long_two": "Monate",
+          "month_long_few": "Monate",
+          "month_long_many": "Monate",
+          "month_long_other": "Monate"
         }
       }
     },
