--- a/lang/en.json
+++ b/lang/en.json
@@ -1701,23 +1701,47 @@
         "desc": "In total {timePassed} {intervalScale} passed, and you have {hits} hits in total.",
         "intervalScale": {
           "round_short": "r",
-          "round_long": "round",
-          "round_long_plural": "rounds",
+          "round_long_zero": "rounds",
+          "round_long_one": "round",
+          "round_long_two": "rounds",
+          "round_long_few": "rounds",
+          "round_long_many": "rounds",
+          "round_long_other": "rounds",
           "minute_short": "m",
-          "minute_long": "minute",
-          "minute_long_plural": "minutes",
+          "minute_long_zero": "minutes",
+          "minute_long_one": "minute",
+          "minute_long_two": "minutes",
+          "minute_long_few": "minutes",
+          "minute_long_many": "minutes",
+          "minute_long_other": "minutes",
           "hour_short": "h",
-          "hour_long": "hour",
-          "hour_long_plural": "hours",
+          "hour_long_zero": "hours",
+          "hour_long_one": "hour",
+          "hour_long_two": "hours",
+          "hour_long_few": "hours",
+          "hour_long_many": "hours",
+          "hour_long_other": "hours",
           "day_short": "d",
-          "day_long": "day",
-          "day_long_plural": "days",
+          "day_long_zero": "days",
+          "day_long_one": "day",
+          "day_long_two": "days",
+          "day_long_few": "days",
+          "day_long_many": "days",
+          "day_long_other": "days",
           "week_short": "w",
-          "week_long": "week",
-          "week_long_plural": "weeks",
+          "week_long_zero": "weeks",
+          "week_long_one": "week",
+          "week_long_two": "weeks",
+          "week_long_few": "weeks",
+          "week_long_many": "weeks",
+          "week_long_other": "weeks",
           "month_short": "M",
-          "month_long": "month",
-          "month_long_plural": "months"
+          "month_long_zero": "months",
+          "month_long_one": "month",
+          "month_long_two": "months",
+          "month_long_few": "months",
+          "month_long_many": "months",
+          "month_long_other": "months"
         }
       }
     },
