--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1693,21 +1693,48 @@
         "continue": "Continuer avec le test étendu",
         "desc": "Temps écoulé total : {timePassed} {intervalScale}, et vous avez {hits} succès au total.",
         "intervalScale": {
+          "round_short": "r",
+          "round_long_zero": "rounds",
+          "round_long_one": "round",
+          "round_long_two": "rounds",
+          "round_long_few": "rounds",
+          "round_long_many": "rounds",
+          "round_long_other": "rounds",
           "minute_short": "m",
-          "minute_long": "minute",
-          "minute_long_plural": "minutes",
+          "minute_long_zero": "minutes",
+          "minute_long_one": "minute",
+          "minute_long_two": "minutes",
+          "minute_long_few": "minutes",
+          "minute_long_many": "minutes",
+          "minute_long_other": "minutes",
           "hour_short": "h",
-          "hour_long": "heure",
-          "hour_long_plural": "heures",
+          "hour_long_zero": "heures",
+          "hour_long_one": "heure",
+          "hour_long_two": "heures",
+          "hour_long_few": "heures",
+          "hour_long_many": "heures",
+          "hour_long_other": "heures",
           "day_short": "j",
-          "day_long": "jour",
-          "day_long_plural": "jours",
+          "day_long_zero": "jours",
+          "day_long_one": "jour",
+          "day_long_two": "jours",
+          "day_long_few": "jours",
+          "day_long_many": "jours",
+          "day_long_other": "jours",
           "week_short": "s",
-          "week_long": "semaine",
-          "week_long_plural": "semaines",
+          "week_long_zero": "semaines",
+          "week_long_one": "semaine",
+          "week_long_two": "semaines",
+          "week_long_few": "semaines",
+          "week_long_many": "semaines",
+          "week_long_other": "semaines",
           "month_short": "m",
-          "month_long": "mois",
-          "month_long_plural": "mois"
+          "month_long_zero": "mois",
+          "month_long_one": "mois",
+          "month_long_two": "mois",
+          "month_long_few": "mois",
+          "month_long_many": "mois",
+          "month_long_other": "mois"
         }
       }
     },
