--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1697,21 +1697,48 @@
                 "continue": "Продолжить продолжительную проверку",
                 "desc": "Всего прошло {timePassed} {intervalScale}, и в общем у тебя {hits} успехов.",
                 "intervalScale": {
+                    "round_short": "r",
+                    "round_long_zero": "rounds",
+                    "round_long_one": "round",
+                    "round_long_two": "rounds",
+                    "round_long_few": "rounds",
+                    "round_long_many": "rounds",
+                    "round_long_other": "rounds",
                     "minute_short": "мин.",
-                    "minute_long": "минута",
-                    "minute_long_plural": "минут",
+                    "minute_long_zero": "минут",
+                    "minute_long_one": "минута",
+                    "minute_long_two": "минут",
+                    "minute_long_few": "минут",
+                    "minute_long_many": "минут",
+                    "minute_long_other": "минут",
                     "hour_short": "ч.",
-                    "hour_long": "час",
-                    "hour_long_plural": "часов",
+                    "hour_long_zero": "часов",
+                    "hour_long_one": "час",
+                    "hour_long_two": "часов",
+                    "hour_long_few": "часов",
+                    "hour_long_many": "часов",
+                    "hour_long_other": "часов",
                     "day_short": "дн.",
-                    "day_long": "день",
-                    "day_long_plural": "дней",
+                    "day_long_zero": "дней",
+                    "day_long_one": "день",
+                    "day_long_two": "дней",
+                    "day_long_few": "дней",
+                    "day_long_many": "дней",
+                    "day_long_other": "дней",
                     "week_short": "нед.",
-                    "week_long": "неделя",
-                    "week_long_plural": "недель",
+                    "week_long_zero": "недель",
+                    "week_long_one": "неделя",
+                    "week_long_two": "недель",
+                    "week_long_few": "недель",
+                    "week_long_many": "недель",
+                    "week_long_other": "недель",
                     "month_short": "мес.",
-                    "month_long": "месяц",
-                    "month_long_plural": "месяцев"
+                    "month_long_zero": "месяцев",
+                    "month_long_one": "месяц",
+                    "month_long_two": "месяцев",
+                    "month_long_few": "месяцев",
+                    "month_long_many": "месяцев",
+                    "month_long_other": "месяцев"
                 }
             }
         },
