Update ru.json up to bbe0e28

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -102,6 +102,27 @@
         "wil": "Воля",
         "wil_short": "ВОЛ"
     },
+    "skill": {
+        "astral": "Астрал",
+        "athletics": "Атлетика",
+        "biotech": "Биотехнологии",
+        "close_combat": "Ближний бой",
+        "con": "Обман",
+        "conjuring": "Воплощение",
+        "cracking": "Взлом",
+        "electronics": "Электроника",
+        "enchanting": "Зачарование",
+        "engineering": "Инженерное дело",
+        "exotic_weapons": "Экзотическое оружие",
+        "firearms": "Стрельба",
+        "influence": "Убеждение",
+        "outdoors": "Ориентирование",
+        "perception": "Внимание",
+        "piloting": "Пилотирование",
+        "sorcery": "Колдовство",
+        "stealth": "Скрытность",
+        "tasking": "Многозадачность"
+    },
     "label.skill": "Навык",
     "section.attributes": "Характеристики",
     "shadowrun6": {
@@ -497,7 +518,7 @@
         },
         "itemtype": {
             "ACCESSORY": "Модификации",
-            "AMMUNITION": "Боеприпасы",
+            "AMMUNITION": "Патроны",
             "ARMOR": "Броня",
             "ARMOR_ADDITION": "Модификации брони",
             "BIOLOGY": "Биотехнологии",
@@ -1130,7 +1151,7 @@
                 "title": "Способности адепта"
             },
             "ammo": "Боезапас",
-            "ammo_add": "Добавить боеприпасы",
+            "ammo_add": "Добавить патроны",
             "armor": {
                 "add": "Добавить новую броню",
                 "column": {
@@ -1610,7 +1631,8 @@
             "damage": "СУ",
             "attackRating": "Знач. атаки",
             "firemodes": "Режимы",
-            "ammo": "Боеприпасы"
+            "ammo": "Патроны",
+            "ammo_loaded": "Тип патронов"
         },
         "ui": {
             "notifications": {
@@ -1649,7 +1671,13 @@
                     "in_progress": "Миграция системных документов...",
                     "completed": "Миграция системы завершена!"
                 },
-                "wrong_import_file": "Файлы сохранений GENESIS или COMMLINK невозможно импортировать! Сначала экспортируйте файл в формате FoundryVTT JSON."
+                "wrong_import_file": "Файлы сохранений GENESIS или COMMLINK невозможно импортировать! Сначала экспортируйте файл в формате FoundryVTT JSON.",
+                "statblock_import": {
+                    "error": "Что-то пошло нге так при импортировании блока характеристик НИП. Попробуйте другую читалоку PDF, однако есть возможность, что ваш PDF файл не поддерживается.",
+                    "success": "Блок характеристик «{actor}» скопирован ",
+                    "actor_tab": "во вкладку актёроов.",
+                    "npc_compendium": "в библиотеку НИП."
+                }
             }
         },
         "EFFECT": {
@@ -1769,27 +1797,14 @@
                 "9": "Редкие познания, доступные немногим.",
                 "10": "Глубокие познания, которые другие тщательно скрывают."
             }
+        },
+        "ammotypes": {
+            "regular": "Обычные",
+            "apds": "ПБОП",
+            "explosive": "Взрывныее",
+            "flechette": "Стреловидные",
+            "gel": "Гелевые",
+            "sticknshock": "Электрошоковые"
         }
-    },
-    "skill": {
-        "astral": "Астрал",
-        "athletics": "Атлетика",
-        "biotech": "Биотехнологии",
-        "close_combat": "Ближний бой",
-        "con": "Обман",
-        "conjuring": "Воплощение",
-        "cracking": "Взлом",
-        "electronics": "Электроника",
-        "enchanting": "Зачарование",
-        "engineering": "Инженерное дело",
-        "exotic_weapons": "Экзотическое оружие",
-        "firearms": "Стрельба",
-        "influence": "Убеждение",
-        "outdoors": "Ориентирование",
-        "perception": "Внимание",
-        "piloting": "Пилотирование",
-        "sorcery": "Колдовство",
-        "stealth": "Скрытность",
-        "tasking": "Многозадачность"
     }
 }
